# GaWe

./: README.md  package-lock.json  package.json
.trae/documents/: Enhance Tray UX & Add Timer Bell.md  Final Polish_ Tray, Activity Monitor, & Data Loading.md  Refine Session Configuration UI_UX.md  UI_UX Polish & App Initialization Logic.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  audio.rs  commands.rs  lib.rs  main.rs  models.rs  timer.rs
src/components/: Layout.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Switch.tsx
src/pages/: Config.tsx  Focus.tsx  Home.tsx  Settings.tsx
src/stores/: sessionStore.ts  settingsStore.ts
src/types/: index.ts
